--- a/styl.css
+++ b/styl.css
@@ -45,10 +45,10 @@ margin-bottom: 1.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
-   width: 25%;
-   border-right: 2px solid var(--darkgray);
-   padding: 2rem;
-   padding-top: 3rem;
+    /* width: 25%; */
+    border-right: 2px solid var(--darkgray);
+    padding: 3rem;
+    padding-top: 3rem;
 }
 
 #usersSection li {
@@ -56,7 +56,7 @@ margin-bottom: 1.5rem;
     font-weight:bold;
     list-style: none;
     text-align: center;
-    padding: 0 0.2rem;
+    padding: 0 .2rem;
     transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
 }
 #usersSection :hover {
@@ -73,14 +73,13 @@ margin-bottom: 1.5rem;
 }
 #user img {
    display: inline;
-   /* padding-top: 1rem; */
+   
 }
 #tasksSection {
  padding: 1.7rem;
  padding-top: 4rem;
  margin-right: 2rem;
  height: 100px;
- /* height: 100vh; */
 }
 #tasksSection p {
     margin-bottom: 1rem;
